WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310935
[Swift in WebKit] Non-PAL targets should not access the internal PAL Swift bridging header (part 7)
https://bugs.webkit.org/show_bug.cgi?id=310935
Summary
[Swift in WebKit] Non-PAL targets should not access the internal PAL Swift br...
Richard Robinson
Reported
2026-03-27 16:18:30 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-27 16:18:37 PDT
<
rdar://problem/173546362
>
Richard Robinson
Comment 2
2026-03-27 16:20:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61533
EWS
Comment 3
2026-03-27 18:15:17 PDT
Committed
310123@main
(58f3edc20495): <
https://commits.webkit.org/310123@main
> Reviewed commits have been landed. Closing PR #61533 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug