[Swift in WebKit] Non-PAL targets should not access the internal PAL Swift bridging header (part 7) https://bugs.webkit.org/show_bug.cgi?id=310935 rdar://173546362

Reviewed by Abrar Rahman Protyasha.

Add some missing headers to the PAL project as private headers and fix issues it exposes.

* Source/WebCore/PAL/PAL.xcodeproj/project.pbxproj:
* Source/WebCore/PAL/pal/module.modulemap:
* Source/WebCore/PAL/pal/spi/cocoa/CoreCryptoSPI.h:

Canonical link: https://commits.webkit.org/310123@main